# VishkarV2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  VISHKAR_FRAMEWORK_SPEC.md  pyproject.toml
.github/workflows/: ci.yml  pr.yml
.reviews/: lessons_learned.json
.reviews/findings/: V2-32_architecture_findings.json  V2-32_code_quality_findings.json  V2-32_security_findings.json  V2-32_tech_stack_findings.json
docs/: ARCHITECTURE_PLAN.md  README.md
docs/decisions/: ADR-001-execution-engine.md
docs/issues/: vishkar-mcp-usage-guide.md
docs/poc/: README.md  aider-setup.md  comparison-matrix.md  goose-setup.md  openhands-setup.md
docs/research/: codebase-understanding.md  execution-engines.md  temporal-io.md
src/: __init__.py  cli.py
src/adapters/: __init__.py
src/adapters/aider/: __init__.py
src/adapters/base/: __init__.py  interface.py
src/adapters/goose/: __init__.py
src/core/: __init__.py
src/integrations/: __init__.py
src/integrations/confluence/: __init__.py
src/integrations/jira/: __init__.py
tests/: test_ci_workflows.py  test_setup.py
